--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -126,7 +126,7 @@ jobs:
             BUILDID=${{ github.run_id }}
             BUILDNUMBER=${{ github.run_number }}
             SOURCE_COMMIT=${{ github.sha }}
-            NETEVENTNETVER=$NETEVENTNETVER
+            NETEVENTNETVER=${{ env.NETEVENTNETVER }}
           no-cache: true
       # - name: Test Linux Image
       #   run: docker run --rm lan2play/netevent:latest /docker/test.sh
