Add Image Upload Unittest

--- a/NetEvent/Server.Tests/NetEvent.Server.Tests.csproj
+++ b/NetEvent/Server.Tests/NetEvent.Server.Tests.csproj
@@ -40,4 +40,14 @@
     <ProjectReference Include="..\Server\NetEvent.Server.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\Test.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
