--- a/NetEvent/Shared/NetEvent.Shared.csproj
+++ b/NetEvent/Shared/NetEvent.Shared.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.8" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
