--- a/.editorconfig
+++ b/.editorconfig
@@ -177,3 +177,6 @@ csharp_style_prefer_switch_expression = true:suggestion
 csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_not_pattern = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
+
+[**/Migrations/**/*.cs]
+dotnet_analyzer_diagnostic.severity = none
