--- a/.sonarlint/sonar.settings.json
+++ b/.sonarlint/sonar.settings.json
@@ -1,1 +1,1 @@
-{"sonar.exclusions":["Server/Migrations/**/*"],"sonar.global.exclusions":["**/build-wrapper-dump.json"],"sonar.inclusions":[]}
+{"sonar.exclusions":["**/Migrations/**/*"],"sonar.global.exclusions":["**/build-wrapper-dump.json"],"sonar.inclusions":[]}
