--- a/NetEvent/Shared/NetEvent.Shared.csproj
+++ b/NetEvent/Shared/NetEvent.Shared.csproj
@@ -9,9 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.6.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.0-preview.6.23329.11" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0-preview.6.23329.11" />
+    <PackageReference Include="FluentValidation" Version="11.8.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.507">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
