--- a/.editorconfig
+++ b/.editorconfig
@@ -95,6 +95,7 @@ dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
 dotnet_style_allow_multiple_blank_lines_experimental = true:silent
 dotnet_code_quality_unused_parameters = all:suggestion
+dotnet_style_prefer_collection_expression = true:suggestion
 ###############################
 # C# Coding Conventions       #
 ###############################
@@ -177,6 +178,15 @@ csharp_style_prefer_switch_expression = true:suggestion
 csharp_style_prefer_pattern_matching = true:silent
 csharp_style_prefer_not_pattern = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
+csharp_style_prefer_top_level_statements = true:silent
+csharp_style_prefer_primary_constructors = true:suggestion
+dotnet_diagnostic.SA1101.severity = none
+dotnet_diagnostic.SA1633.severity = none
+dotnet_diagnostic.SA1128.severity = none
+dotnet_diagnostic.SA1309.severity = none
+dotnet_diagnostic.SA1306.severity = none
+dotnet_diagnostic.SA1600.severity = none
+dotnet_diagnostic.SA1124.severity = none
 
 [**/Migrations/**/*.cs]
 dotnet_analyzer_diagnostic.severity = none
